[package]
name = "kvs"
version = "0.1.0"
edition = "2024"
authors = ["Abdulbaasit <>"]
description = "A key-value store"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.0.7"
walkdir = "2.2.7"